# stratum

./: .gitignore
cicd/: connection_monitor.sh  deploy.py  docker-compose.yml  rrp-pool.Dockerfile  rrp-translator.Dockerfile
nomium/hello/: Cargo.toml
nomium/hello/src/: lib.rs  main.rs
nomium/prometheus/: Cargo.toml  README.md
nomium/prometheus/src/: lib.rs
nomium/shares-logger/: Cargo.toml  README-RRP-428.md  README-RU.md  README.md
nomium/shares-logger/src/: config.rs  lib.rs  main.rs  worker_name_store.rs
nomium/shares-logger/src/config/: default_config.toml  mod.rs  settings.rs
nomium/shares-logger/src/errors/: clickhouse.rs  mod.rs
nomium/shares-logger/src/models/: authorization_log.rs  authorization_record.rs  block_found.rs  clickhouse_block.rs  clickhouse_share.rs  mod.rs  share.rs  share_log.rs
nomium/shares-logger/src/services/: authorization_processor.rs  bitcoin_rpc_service.rs  clickhouse.rs  debug_log.rs  difficulty.rs  external_api.rs  mod.rs  retry.rs  share_processor.rs
nomium/shares-logger/src/storage/: mod.rs
nomium/shares-logger/src/storage/clickhouse/: mod.rs  pool_manager.rs  retry.rs  retry_config.rs  service.rs
nomium/shares-logger/src/storage/clickhouse/queries/: auth_table.sql  blocks_table.sql  blocks_with_auth_view.sql  hashrate_view.sql  migrations.sql  mod.rs  shares_table.sql  shares_with_auth_view.sql
nomium/shares-logger/src/storage/mock/: mod.rs  service.rs
nomium/shares-logger/src/traits/: mod.rs  share_data.rs  storage.rs
nomium/shares-logger/tests/: highload_test.rs  share_types_test.rs
nomium/shares-logger/tests/common/: mock_storage.rs  mod.rs
protocols/v1/: Cargo.toml
protocols/v2/roles-logic-sv2/: Cargo.toml
roles/: .env  Cargo.toml  env_example
roles/jd-server/config-examples/: jds-config-local-PoolTest.toml
roles/logs/: Pool.log.2024-12-27  Translator.log.2024-12-27
roles/pool/: .env  Cargo.toml
roles/translator/: Cargo.toml
(+23 files in other folders)
