[package]
name = "shares-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
mining_sv2 = { path = "../../protocols/v2/subprotocols/mining" }
log = "0.4"
env_logger = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["rt", "sync", "rt-multi-thread", "time", "macros"] }
once_cell = "1.8"
clickhouse = "0.13.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
primitive-types = "0.12"
lazy_static = "1.4"